👽️ Feat: update restapi deps
